--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,53 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+* {
+    box-sizing: border-box;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  
+  html {
+    font-family: 'Quicksand', sans-serif;
   }
-}
+  
+  body {
+    margin: 0;
+    background: radial-gradient(#282c34, #282c34);
+  }
+  
+  .header-background {
+    position: absolute;
+    width: 100%;
+    height: 320px;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  
+  svg {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  .not-found {
+    margin-top: 5rem;
+    text-align: center;
+  }
+  
+  .not-found h1 {
+    font-size: 5rem;
+    margin: 0px;
+    font-weight: 900;
+    color: #262626;
+    text-transform: uppercase;
+    background: linear-gradient(90deg, #f9572a, #ffc905);
+    background-clip: border-box;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-size: cover;
+    background-position: center;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  .not-found p {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #ddd8d8;
+  }
